--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <section class="services">
         <h2>Nuestros Servicios</h2>
         <ul>
-            <li><img src="icons/windows.png" alt="Windows Icon"> Administración de Sistemas Windows</li>
-            <li><img src="icons/linux.png" alt="Linux Icon"> Administrador de Sistemas Linux</li>
-            <li><img src="icons/service_desk.png" alt="Service Desk Icon"> Service Desk</li>
-            <li><img src="icons/siem.png" alt="SIEM Icon"> Implantación de SIEM en Empresas</li>
-            <li><img src="icons/network.png" alt="Network Icon"> Arquitectura de Red</li>
-            <li><img src="icons/electronics.png" alt="Electronics Icon"> Configuración y Puesta en Servicio de Electrónicas de Red</li>
+            <li><i class="fa-brands fa-windows"></i>&emsp;Administracion de Sistemas Windows</li>
+            <li><i class="fa-brands fa-linux"></i>&emsp;Administrador de Sistemas Linux</li>
+            <li><i class="fa-solid fa-network-wired"></i>&emsp;Service Desk</li>
+            <li><i class="fa-regular fa-globe-pointer"></i>&emsp;Implantación de SIEM en Empresas</li>
+            <li><i class="fa-solid fa-diagram-project"></i>&emsp;Arquitectura de Red</li>
+            <li><i class="fa-solid fa-ethernet"></i>&emsp;Configuración y Puesta en Servicio de Electrónicas de Red</li>
         </ul>
     </section>
     
